[gd_scene load_steps=4 format=2]

[ext_resource path="res://2DToolbox/DensBox2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://3DToolbox/ColBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://2DToolbox/HVSettings.gd" type="Script" id=3]

[node name="HVSettings" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 10
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 122.0
margin_bottom = 24.0
hint_tooltip = "Set line visibility."

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = 5.0
margin_right = 59.0
margin_bottom = 19.0
text = "Visible    "

[node name="CheckBox" type="CheckBox" parent="HBoxContainer"]
margin_left = 63.0
margin_right = 87.0
margin_bottom = 24.0

[node name="ColBox" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 34.0
margin_right = 122.0
margin_bottom = 139.0
hint_tooltip = "Set line colour (red, green, blue)."

[node name="DensBox2D" parent="." instance=ExtResource( 1 )]
margin_top = 149.0
margin_right = 122.0
margin_bottom = 195.0
hint_tooltip = "Set no. of lines."
min_value = 0.0
max_value = 400
step = 1.0
value = 50.0
[connection signal="toggled" from="HBoxContainer/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="colour_changed" from="ColBox" to="." method="_on_ColBox_colour_changed"]
[connection signal="density_changed" from="DensBox2D" to="." method="_on_DensBox2D_density_changed"]
